--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,22 +1,16 @@
 <!doctype html>
 <html>
     <head>
-        {% if title %}
-        <title>{{ title }} - Microblog</title>
+        {%if title %}
+        <title>{{ title }} - Microblog</title> 
         {% else %}
-        <title>Welcome to Microblog</title>
+        <title>Welcome to Microblog</title> 
         {% endif %}
     </head>
     <body>
-        <div>
-            Microblog:
+        <div>Microblog: 
             <a href="{{ url_for('index') }}">Home</a>
-            {% if current_user.is_anonymous %}
             <a href="{{ url_for('login') }}">Login</a>
-            {% else %}
-            <a href="{{ url_for('user', username=current_user.username) }}">Profile</a>
-            <a href="{{ url_for('logout') }}">Logout</a>
-            {% endif %}
         </div>
         <hr>
         {% with messages = get_flashed_messages() %}
